Fix tautologous DCHECK in base::internal::JSONParser.

BUG=596278
R=mark@chromium.org

Review URL: https://codereview.chromium.org/1834933003

Cr-Commit-Position: refs/heads/master@{#383316}

Former-commit-id: 19c6150642d7ab6a5a455b36b85efd6715028425